--- a/cmt/src/main/resources/messages.properties
+++ b/cmt/src/main/resources/messages.properties
@@ -3,11 +3,18 @@ cmt.constraint.surname.notblank = surname cannot be empty.
 cmt.constraint.username.notblank = username cannot be empty.
 cmt.constraint.password.notblank = password cannot be empty.
 cmt.constraint.email.notblank = email cannot be empty.
+cmt.constraint.tckn.notblank = tckn cannot be empty.
+cmt.constraint.phone.notblank = phone cannot be empty.
+cmt.constraint.address.notblank = address cannot be empty.
+
+
 
 cmt.constraint.name.size = follow the name rules.
 cmt.constraint.surname.size = follow the surname rules.
 cmt.constraint.username.size = follow the username rules.
 cmt.constraint.password.size = follow the password rules.
 cmt.constraint.email.rules = follow the email rules.
+cmt.constraint.tckn.rules = follow the tckn rules.
+cmt.constraint.phone.rules = follow the phone rules.
 
 cmt.constraint.user.create.success =  use creation succesfull
