--- a/cmt/src/main/resources/messages.properties
+++ b/cmt/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ cmt.constraint.address.notblank = address cannot be empty.
 cmt.constraint.name.size = follow the name rules.
 cmt.constraint.surname.size = follow the surname rules.
 cmt.constraint.username.size = follow the username rules.
-cmt.constraint.password.size = follow the password rules.
+cmt.constraint.password.size = password must be at least 8 characters and at least one character must be uppercase.
 cmt.constraint.email.rules = follow the email rules.
 cmt.constraint.tckn.rules = follow the tckn rules.
 cmt.constraint.phone.rules = follow the phone rules.
