--- a/cmt/src/main/resources/messages.properties
+++ b/cmt/src/main/resources/messages.properties
@@ -17,4 +17,4 @@ cmt.constraint.email.rules = follow the email rules.
 cmt.constraint.tckn.rules = follow the tckn rules.
 cmt.constraint.phone.rules = follow the phone rules.
 
-cmt.constraint.user.create.success =  use creation succesfull
+cmt.constraint.users.create.success =  use creation succesfull
